gst-vaapi NEWS -- summary of changes.  2010-06-DD
Copyright (C) 2010 Splitted-Desktop Systems

Version 0.2.5 - DD.Jun.2010
* Fix build with older VA-API 0.29-sds
* Fix decoding of some H.264 streams. e.g. Ice Age 2 trailer

Version 0.2.4 - 18.May.2010
* Fix video rendering rect within an embedder window (Totem)
* Disable GLX rendering when vaapisink uses a foreign X window

Version 0.2.3 - 16.May.2010
* Fix memory leak of encoded buffers
* Fix decoder caps to report codec aliases
* Fix VC-1 decoding through the playbin2 pipeline

Version 0.2.2 - 14.May.2010
* Fix packaging dependencies
* Fix a crash in the FFmpeg decoder on close
* Fix OpenGL texture internal format (Clutter)
* Fix foreign window size for embedding (Totem)

Version 0.2.1 - 12.May.2010
* Fix integration within the playbin2 pipeline
* Fix vaapidecode to expose the HW supported caps only
* Add GstXOverlay interface to vaapisink (Totem media player)

Version 0.2.0 - 05.May.2010
* Relicense gst-libs/ code to LGPL v2.1+
* Add FFmpeg/VAAPI decoder for the new `vaapidecode' element

Version 0.1.2 - 30.Mar.2010
* Add AYUV image format
* Add compatibility with the original VA-API 0.29
* Add OpenGL support through VA/GLX extensions or TFP+FBO fallback

Version 0.1.1 - 23.Mar.2010
* Document public API for libgstvaapi-*.so.*
* Optimize `vaapiconvert' pipeline (direct-rendering)
* Allow `vaapisink` to render videos in fullscreen mode

Version 0.1.0 - 16.Mar.2010
* Initial release